--- a/public/.htaccess
+++ b/public/.htaccess
@@ -31,6 +31,7 @@ Options All -Indexes
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^([\s\S]*)$ index.php/$1 [L,NC,QSA]
+	RewriteRule ^([\s\S]*)$ /public/$1 [NC,L,QSA]
 
 	# Ensure Authorization header is passed along
     RewriteCond %{HTTP:Authorization} .
