--- a/web.config
+++ b/web.config
@@ -8,6 +8,12 @@
       
           <action type="Rewrite" url="/public/{R:1}" appendQueryString="true" />
           </rule>
+
+           <rule name="Imported Rule 2" stopProcessing="true">
+          <match url="^(.*)$" ignoreCase="false" />
+      
+          <action type="Rewrite" url="/usuarios/{R:1}" appendQueryString="true" />
+          </rule>
       </rules>
     </rewrite>
   </system.webServer>
